# Robotics

./: README.md
ros2_ws/src/labs/lab1_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/labs/lab1_pubsub/bag_files/rosbag2_2025_09_27-23_51_49/: metadata.yaml
ros2_ws/src/labs/lab1_pubsub/lab1_pubsub/: CMakeLists.txt
ros2_ws/src/labs/lab1_pubsub/lab1_pubsub/bag_files/rosbag2_2025_09_27-23_51_49/: rosbag2_2025_09_27-23_51_49_0.db3
ros2_ws/src/labs/lab1_pubsub/lab1_pubsub/src/: action_client.cpp  add_two_int_client.cpp  pubc.cpp  subc.cpp
ros2_ws/src/labs/lab1_pubsub/launch/: launch_pub_sub.launch.py
ros2_ws/src/labs/lab1_pubsub/src/: action_server.cpp  add_two_int_server.cpp  custom_msg.cpp
ros2_ws/src/labs/lab2_turtlesim_pub_pkg/: CMakeLists.txt
ros2_ws/src/labs/lab2_turtlesim_pub_pkg/lab2_turtlesim_pub_pkg/: package.xml
ros2_ws/src/labs/lab2_turtlesim_pub_pkg/lab2_turtlesim_pub_pkg/src/: param.cpp
ros2_ws/src/labs/lab2_turtlesim_pub_pkg/src/: turtle_pub.cpp
ros2_ws/src/labs/lab3_custom_msg_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/labs/lab3_custom_msg_pkg/msg/: MyNewSensor.msg
ros2_ws/src/labs/lab4_my_robot_gazebo/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  package.xml  symlink_install_manifest.txt
ros2_ws/src/labs/lab4_my_robot_gazebo/ament_cmake_core/: lab4_my_robot_gazeboConfig.cmake  package.cmake
ros2_ws/src/labs/lab4_my_robot_gazebo/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
ros2_ws/src/labs/lab4_my_robot_gazebo/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: lab4_my_robot_gazebo
ros2_ws/src/labs/lab4_my_robot_gazebo/ament_cmake_symlink_install/: ament_cmake_symlink_install.cmake  ament_cmake_symlink_install_uninstall_script.cmake
ros2_ws/src/labs/lab4_my_robot_gazebo/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ros2_ws/src/labs/lab4_my_robot_gazebo/worlds/: building_robot.sdf
ros2_ws/src/labs/lab5_my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/labs/lab5_my_robot_description/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/labs/lab5_my_robot_description/rviz/: display.rviz
ros2_ws/src/labs/lab5_my_robot_description/urdf/: begginer_robot.urdf.xacro
ros2_ws/src/tasks/task1_rpm_speed/: CMakeLists.txt  package.xml
ros2_ws/src/tasks/task1_rpm_speed/launch/: rpm_speed_launch.py
ros2_ws/src/tasks/task1_rpm_speed/src/: rpm_publisher.cpp  speed_calculator.cpp
ros2_ws/src/tasks/task2_camera_service/: CMakeLists.txt  package.xml
ros2_ws/src/tasks/task2_camera_service/src/: camera_service_client.cpp  camera_service_server.cpp
ros2_ws/src/tasks/task2_camera_service/srv/: CameraAngle.srv
